# llamaclick

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cargo_publish_log.txt  cargo_publish_log2.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: api.md  index.html  installation.html  installation.md  usage.html  usage.md
docs/api/: index.html
examples/: linkedin_job_search.rs  llm_integration.rs
llamaclick/: __init__.py  client.py  main.py  utils.py
package/: Cargo.toml
package/examples/: README.md  multi_agent_automation.rs  simple_browser.rs
package/src/: actions.py  browser.rs  core.py  elements.py  main.rs
package/src/cli/: commands.rs
package/src/config/: settings.rs
package/src/utils/: mod.rs
package2/: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
package2/src/: agent.rs  error.rs  lib.rs  llms.rs
package2/src/cli/: mod.rs
package2/src/config/: mod.rs
src/: browser.py  error.rs  lib.rs  main.rs  wait.py
src/llamaclick/: __init__.py
src/utils/: ascii_art.rs  crypto.rs  mod.rs  output.rs
tests/: integration_tests.rs  test_client.py  test_main.py
