[package]
name = "llamaclick"
version = "0.1.0"
edition = "2021"
authors = ["LlamaSearch AI <dev@llamasearch.ai>"]
description = "An enterprise-grade CLI application for intelligent web automation and AI-driven testing powered by LLMs"
license = "MIT"
repository = "https://github.com/llamasearch/llamaclick"
documentation = "https://docs.rs/llamaclick"
readme = "README.md"
keywords = ["automation", "browser", "llm", "testing", "cli"]
categories = ["command-line-utilities", "web-programming", "development-tools::testing"]
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
thiserror = "1.0.40"
log = "0.4.19"
env_logger = "0.10.0"
colored = "2.0.4"

# Version constraints for compatibility with older Rust
tokio = { version = "1.28", features = ["full"] }
# Using a specific version of reqwest to avoid dependency incompatibility
reqwest = { version = "0.11.18", default-features = false, features = ["json", "blocking"] }
dialoguer = "0.10"

[dev-dependencies]
tempfile = "3.8.0"
assert_cmd = "2.0.12"
predicates = "3.0.3"

[[example]]
name = "simple_browser"
path = "examples/simple_browser.rs"

[[example]]
name = "llm_integration"
path = "examples/llm_integration.rs"

[[example]]
name = "linkedin_job_search"
path = "examples/linkedin_job_search.rs"

[features]
default = ["browser", "llm"]
browser = []
llm = []
linkedin = ["browser", "llm"]
security = []
telemetry = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
